--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2018"
 
 serde = { version = "1.0", features = ["derive"] }
 clap = "2.33.3"
-substrate-api-client = { git = "https://github.com/simonsso/substrate-api-client.git", branch = 'simonsso' }
+substrate-api-client = { git = "https://github.com/simonsso/substrate-api-client.git", branch = 'polkadexinternaltestnet' }
 # substrate-api-client = { path = "../substrate-api-client" }
 
-sp-core = { git = 'https://github.com/paritytech/substrate.git', rev = 'd6c33e7ec313f9bd5e319dc0a5a3ace5543f9617', package = 'sp-core', default-features = false, features = ['full_crypto'] }
-keyring = { git = 'https://github.com/paritytech/substrate.git', rev = 'd6c33e7ec313f9bd5e319dc0a5a3ace5543f9617', package = 'sp-keyring' }
+sp-core = { git = 'https://github.com/paritytech/substrate.git', rev = 'e5437efefa82bd8eb567f1245f0a7443ac4e4fe7', package = 'sp-core', default-features = false, features = ['full_crypto'] }
+keyring = { git = 'https://github.com/paritytech/substrate.git', rev = 'e5437efefa82bd8eb567f1245f0a7443ac4e4fe7', package = 'sp-keyring' }
